# ariac_group-2

./: README.md  competition_control_system.cpp  final_spring2024.yaml
final_group_2/: CMakeLists.txt  package.xml
final_group_2/config/: my_sensors.yaml
final_group_2/doc/: README.md
final_group_2/include/: competition_control_system_interface.hpp  utils.hpp
final_group_2/launch/: final.launch.py
final_group_2/src/: competition_control_system.cpp
robot_commander_msgs/: CMakeLists.txt  package.xml
robot_commander_msgs/srv/: PickPartFromBin.srv  PlacePartOnTray.srv
rwa3_group_2/: CMakeLists.txt  README.md  package.xml
rwa3_group_2/launch/: rwa3.launch.py
rwa3_group_2/rwa3_group_2/: check_competition_state_interface.py  orders_sub_interface.py  ship_orders_interface.py  submit_order_interface.py
rwa3_group_2/script/: check_competition_state.py  orders.py  ship_orders.py  submit_order.py
rwa4_group_2/: CMakeLists.txt  package.xml
rwa4_group_2/config/: my_sensors.yaml
rwa4_group_2/doc/: README.md
rwa4_group_2/launch/: rwa4.launch.py
rwa4_group_2/rwa4_group_2/: aruco_detector_interface.py  check_competition_state_interface.py  orders_sub_interface.py  sensor_sub_interface.py
rwa4_group_2/rwa4_group_2/My_changes_29_april/: orders_sub_interface.py  sensor_sub_interface.py
rwa4_group_2/script/: check_competition_state.py  orders.py  sensor_sub_.py  ship_orders.py  submit_order.py
rwa5_group_2/: CMakeLists.txt  package.xml
rwa5_group_2/doc/: README.md
rwa5_group_2/include/: competition_control_system_interface.hpp  floor_robot_cpp_only.hpp  floor_robot_cpp_python.hpp
rwa5_group_2/launch/: rwa5.launch.py  rwa5_2.launch.py
rwa5_group_2/rwa5_group_2/: aruco_detector_interface.py  floor_robot_interface.py  orders_sub_interface.py  orders_sub_interface_0.py  orders_sub_interface_1.py  sensor_sub_interface.py
rwa5_group_2/script/: check_competition_state.py  floor_robot_demo.py  orders.py  sensor_sub_.py  ship_orders.py  submit_order.py
rwa5_group_2/src/: floor_robot_cpp_only.cpp  floor_robot_cpp_python.cpp  main_cpp.cpp  main_cpp_only.cpp  main_cpp_python.cpp
