<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rwa3_group_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hiteshskyatham@gmail.com">hitesh</maintainer>
  <maintainer email="snairgautam@gmail.com">gautam</maintainer>
  <maintainer email="amaryanmishra21@gmail.com">aryan</maintainer>
  <maintainer email="sarin.ann10@gmail.com">sarin</maintainer>
  <maintainer email="keyurborad5@gmail.com">keyur</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ariac_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
